make css darker

--- a/app/assets/stylesheets/scaffolds.css.scss
+++ b/app/assets/stylesheets/scaffolds.css.scss
@@ -1,19 +1,19 @@
 body {
-  background-color: #fff;
-  color: #333;
-  font-family: verdana, arial, helvetica, sans-serif;
-  font-size: 13px;
-  line-height: 18px; }
+//  background-color: #fff;
+//  color: #333;
+//  font-family: verdana, arial, helvetica, sans-serif;
+  font-size: 100%;
+  line-height: 100%; }
 
 p, ol, ul, td {
   font-family: verdana, arial, helvetica, sans-serif;
-  font-size: 13px;
-  line-height: 18px; }
+  font-size: 100%;
+  line-height: 100%; }
 
 pre {
   background-color: #eee;
   padding: 10px;
-  font-size: 11px; }
+  font-size: 87%; }
 
 a {
   color: #000;
@@ -52,5 +52,5 @@ div {
     background-color: #c00;
     color: #fff; }
   ul li {
-    font-size: 12px;
+    font-size: 93%;
     list-style: square; } }
