--- a/app/views/monsters/index.html.erb
+++ b/app/views/monsters/index.html.erb
@@ -22,7 +22,7 @@
     <td><%= card.number %></td>
     <td><%= card.name %></td>
     <td><%= card.description %></td>
-    <td><%= card.attribute %></td>
+    <td><%= card.attribute.name %></td>
     <td><%= card.image_url %></td>
     <td><%= card.quantity %></td>
     <td><%= card.tokens %></td>
