still don't have the effects working yet...yarg

--- a/app/assets/stylesheets/duelbelt.css.scss
+++ b/app/assets/stylesheets/duelbelt.css.scss
@@ -12,4 +12,10 @@ body {
     family: verdana, arial, helvetica, sans-serif;
   }
   line-height: 18px;
+  
+  width: 981px;
+  margin: {
+    left: auto;
+    right: auto;
+  }
 }
