--- a/app/views/monsters/_form.html.erb
+++ b/app/views/monsters/_form.html.erb
@@ -20,7 +20,7 @@
 			  </div>
 			  <div class="field">
 			    <%= f.label :attribute %><br />
-			    <%= f.collection_select :attribute, Attribute.all, :id, :name, { :selected => @monster.attribute.id } %> 
+			    <%= f.collection_select :attribute, Attribute.all, :id, :name, @monster.attribute ? { :selected => @monster.attribute.id } : {} %> 
 			  </div>
 
 			  <div class="field">
@@ -42,13 +42,17 @@
 
 				<div class="field">
 					<%= f.label :monster_type %>
-					<%= f.collection_select :monster_type, MonsterType.all, :id, :name, { :selected => @monster.monster_type.id } %>
+					<%= f.collection_select :monster_type, MonsterType.all, :id, :name, @monster.monster_type ? { :selected => @monster.monster_type.id } : {} %>
 				</div>
 
 				<div class="field">
 					<%= f.label :monster_effects %><br />
-					<%= f.collection_select :monster_effect_ids, MonsterEffect.all, :id, :name, 
-						                      {}, { :selected => @monster.monster_effects, :multiple => true } %>
+					<% default = MonsterEffect.new
+						 default.name = 'None'
+						 default.id = nil
+					%>
+					<%= f.collection_select :monster_effect_ids, MonsterEffect.all << default, :id, :name, {}, 
+					{ :selected => @monster.monster_effects, :multiple => true } %>
 				</div>
 			  <div class="field">
 			    <%= f.label :description %><br />
