clean up index pages markup and css

--- a/app/assets/stylesheets/duelbelt.css.scss
+++ b/app/assets/stylesheets/duelbelt.css.scss
@@ -19,3 +19,19 @@ body {
     right: auto;
   }
 }
+
+td {
+  img { 
+    width: 50px;
+  }
+}
+
+a {
+  color: #eee;
+  &:visited {
+    color: #aaa; }
+  &:hover {
+    color: #fff;
+    background-color: #000; 
+  } 
+}
