--- a/app/views/monsters/index.html.erb
+++ b/app/views/monsters/index.html.erb
@@ -8,6 +8,7 @@
     <th>Image</th>    
     <th>Type</th>
     <th>Quantity</th>
+		<th>Rarity</th>
     <th>Tokens</th>
     <th>Counters</th>
     <th>Coins</th>
@@ -26,6 +27,7 @@
 
     <td><%= "#{card.monster_kind ? card.monster_kind.name : nil}#{card.effect? ? ' / Effect' : nil}#{card.tuner? ? ' / Tuner' : nil}" %></td>
     <td><%= card.quantity %></td>
+    <td><%= card.rarity ? card.rarity.name : nil %></td>
     <td><%= card.tokens %></td>
     <td><%= card.counters %></td>
     <td><%= card.coins %></td>
