--- a/app/assets/stylesheets/duelbelt.css.scss
+++ b/app/assets/stylesheets/duelbelt.css.scss
@@ -35,3 +35,15 @@ a {
     background-color: #000; 
   } 
 }
+
+// Card editing pages
+#extras {
+  .field {
+    text-align: center;
+    float: left;
+    width: 150px;
+    margin: {
+      right: 10px;
+    }
+  }
+}
