--- a/app/assets/stylesheets/trap.css.scss
+++ b/app/assets/stylesheets/trap.css.scss
@@ -1,3 +1,10 @@
 // Place all the styles related to the trap controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+.edit_trap {
+  #card {
+    background: {
+      color: #ca7093;
+    };
+  }
+}
