--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,14 +1,16 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Duelbelt</title>
+  <title>Duel Belt</title>
   <%= stylesheet_link_tag    "application" %>
+	<style type="text/css"><%= yield :stylesheets %></style>
+	
   <%= javascript_include_tag "application" %>
   <%= csrf_meta_tags %>
 </head>
 <body>
 
-<%= yield %>
+<%= content_for?(:content) ? yield(:content) : yield %>
 
 </body>
 </html>
