--- a/app/views/traps/_form.html.erb
+++ b/app/views/traps/_form.html.erb
@@ -1,3 +1,7 @@
+<div id="image">
+  <%= @trap.number ? image_tag(card_image_url(@trap), { :alt => @trap.name }) : nil %>
+</div>
+
 <%= form_for(@trap) do |f| %>
   <% if @trap.errors.any? %>
     <div id="error_explanation">
@@ -10,7 +14,7 @@
       </ul>
     </div>
   <% end %>
-
+<div id="card">
 	<div id="fields">
 		<div id="standard">
 			<div id="top" class="section">
@@ -26,10 +30,6 @@
 			</div>
 			
 			<div id="middle" class="section">
-				<div class="field">
-			    <%= @trap.number ? image_tag(card_image_url(@trap), { :alt => @trap.name }) : nil %>
-			  </div>
-			  
 				  <div class="field">
 				    <%= f.label :number %><br />
 				    <%= f.text_field :number %>
@@ -38,7 +38,7 @@
 
 			  <div class="field">
 			    <%= f.label :description %><br />
-			    <%= f.text_area :description, :cols => 40, :rows => 10 %>
+			    <%= f.text_area :description, :cols => 40, :rows => 10, :class => 'description' %>
 			  </div>
 			</div>  
 
@@ -61,4 +61,5 @@
   <div class="actions section">
     <%= f.submit %>
   </div>
+</div>
 <% end %>
