--- a/app/assets/stylesheets/spell.css.scss
+++ b/app/assets/stylesheets/spell.css.scss
@@ -1,7 +1,7 @@
 // Place all the styles related to the spell controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
-.edit_spell {
+.edit_spell, .new_spell {
   #card {
     background: {
       color: #3cb371;
