get things lined up

--- a/app/views/spells/_form.html.erb
+++ b/app/views/spells/_form.html.erb
@@ -15,7 +15,7 @@
     </div>
   <% end %>
 
-<div id="card">
+<div id="monster_card">
 	<div id="fields">
 		<div id="standard">
 			<div id="top" class="section">
